--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+  <head>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
   .red-text {
@@ -24,7 +27,7 @@
     width: 100px;
   }
 </style>
-
+  </head>
 <div class="container-fluid">
   <h2 class="red-text">CatPhotoApp</h2>
 
@@ -54,3 +57,4 @@
     <button type="submit">Submit</button>
   </form>
 </div>
+</html>
