--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <p>Click here for <a href="#">cat photos</a>.</p>
 
   <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. "></a>
-<img src="https://bit.ly/fcc-running-cats" alt="soon">
+<img class="img-responsive" src="https://bit.ly/fcc-running-cats" alt="soon">
   <p>Things cats love:</p>
   <ul>
     <li>cat nip</li>
